Fix overflow of button text on small screens

--- a/style.css
+++ b/style.css
@@ -177,6 +177,14 @@ label[for="pixel-size-input"] {
   display: none;
 }
 
+.desktop-text {
+  display: none;
+}
+
+@media (min-width: 600px) {
+  display: initial;
+}
+
 .spinner:after {
   display: block;
   content: '⋯';
